--- a/Client/package.json
+++ b/Client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.8",
@@ -19,5 +20,5 @@
     "@vitejs/plugin-react": "^1.0.7",
     "vite": "^2.8.0"
   },
-  "proxy": "http://localhost:8080/"
+  "proxy": "http://localhost:8000/"
 }
