feat:thumbnail commented

--- a/Server/rtmp/nginx.conf
+++ b/Server/rtmp/nginx.conf
@@ -13,6 +13,14 @@ rtmp {
             hls_fragment 5s;
             hls_playlist_length 20s;
             on_publish http://auth_server_py:8000/auth;
+            #  # make previews
+            # recorder preview {
+            #     record keyframes;
+            #     record_max_frames 4;
+            #     record_path /usr/local/nginx/html;
+            #     record_interval 30s;
+            #     exec_record_done ffmpeg -i /tmp//$name.flv -vcodec png -vframes 1 -an -f rawvideo -s 320x240 -ss 00:00:01 -y /usr/local/nginx/nam.png;
+            # }
         }
     }
 }
