--- a/Server/rtmp/nginx.conf
+++ b/Server/rtmp/nginx.conf
@@ -12,7 +12,9 @@ rtmp {
             hls_path /tmp/hls;
             hls_fragment 5s;
             hls_playlist_length 20s;
-            on_publish http://auth_server_py:8000/auth;
+            on_publish http://auth_server_py:8000/api/auth;
+            on_done http://auth_server_py:8000/api/done;
+
             #  # make previews
             # recorder preview {
             #     record keyframes;
