--- a/Server/rtmp/nginx.conf
+++ b/Server/rtmp/nginx.conf
@@ -14,6 +14,10 @@ rtmp {
             hls_playlist_length 20s;
             on_publish http://auth_server_py:8000/api/auth;
             on_done http://auth_server_py:8000/api/done;
+            #record keyframes;
+            #record_path /tmp/vc;
+            #record_max_frames 2;
+            #record_interval 2m;
 
             #  # make previews
             # recorder preview {
