--- a/Server/rtmp/Dockerfile
+++ b/Server/rtmp/Dockerfile
@@ -4,3 +4,11 @@ COPY nginx.conf /etc/nginx/nginx.conf
 
 COPY index.html /www/
 COPY style.css /www/
+# COPY thumb.sh /home/
+
+
+# RUN apt update
+# RUN apt -y upgrade
+# RUN apt install -y ffmpeg
+# RUN chmod +x /home/thumb.sh
+# RUN touch /home/log
