--- a/Server/rtmp/nginx.conf
+++ b/Server/rtmp/nginx.conf
@@ -1,4 +1,5 @@
 worker_processes auto;
+user root;
 rtmp_auto_push on;
 events {}
 rtmp {
@@ -23,6 +24,25 @@ rtmp {
             #     record_interval 30s;
             #     exec_record_done ffmpeg -i /tmp//$name.flv -vcodec png -vframes 1 -an -f rawvideo -s 320x240 -ss 00:00:01 -y /usr/local/nginx/nam.png;
             # }
+            # exec /home/thumb.sh $name;
+            # on_publish http://auth_server_py:8000/auth;
+#             on_done http://rtmp_server_py:8080/thumb;
+#             recorder preview {
+#                 record keyframes;
+#                 record_max_frames 30;
+#                 record_path /tmp/hls;
+#                 record_suffix .mp4;
+#                 # record_interval 30s;
+#             }
+#             exec_push /home/thumb.sh $name;
+# exec_pull /home/thumb.sh $name;
+# exec /home/thumb.sh $name;
+# exec_static /home/thumb.sh $name;
+# exec_publish /home/thumb.sh $name;
+# exec_play /home/thumb.sh $name;
+# exec_play_done /home/thumb.sh $name;
+# exec_publish_done /home/thumb.sh $name;
+# exec_record_done /home/thumb.sh $name;
         }
     }
 }
@@ -59,6 +79,9 @@ http {
             add_header Cache-Control no-cache;
 
             add_header Access-Control-Allow-Origin *;
+        }
+        location /thumb{
+
         }
     }
 }
