--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build client
-      run: docker build ./Client --tag client-image:$(date +%s);
+      run: docker build ./Client --tag client-image:$(date +%s)
+    - name: Login to docker
+      run: echo $docker_password | docker login -u $docker_login --password-stdin
     - name: Log
       run: docker ps -a
