--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,9 @@ jobs:
     - name: Build client
       run: docker build ./Client --tag client-image:$(date +%s)
     - name: Login to docker
-      run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Log
       run: docker ps -a
