--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,10 +16,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build client
       run: docker build ./Client --tag client-image:$(date +%s)
+      
     - name: Login to docker
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
+        username: ${{ secrets.DOCKER_LOGIN }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Log
       run: docker ps -a
