--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         context: ./Client
         push: true
-        tags: Client:latest
+        tags: egoraugust/client:latest
         
     - name: Log
       run: docker ps -a
