--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,33 +2,40 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build client
-      run: docker build ./Client --tag client-image:$(date +%s)
-      
-    - name: Login to docker
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_LOGIN }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v3
-      with:
-        context: ./Client
-        push: true
-        tags: egoraugust/rusi4:client
-        
-    - name: Log
-      run: docker ps -a
+      - uses: actions/checkout@v3
+
+      - name: Login to docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_LOGIN }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push client
+        uses: docker/build-push-action@v3
+        with:
+          context: ./Client
+          push: true
+          tags: egoraugust/rusi4:client
+
+      - name: Build and push rtmp server
+        uses: docker/build-push-action@v3
+        with:
+          context: ./Server/rtmp
+          push: true
+          tags: egoraugust/rusi4:rtmp
+
+      - name: Build and push API server
+        uses: docker/build-push-action@v3
+        with:
+          context: ./Server/serverpy
+          push: true
+          tags: egoraugust/rusi4:api
