--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,3 +39,14 @@ jobs:
           context: ./Server/serverpy
           push: true
           tags: egoraugust/rusi4:api
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: ssh client
+      run: apk add openssh-client
+      run: eval $(ssh-agent -s)
+      run: echo "$PRIVATE" | tr -d '\r' | ssh-add -
+      run: mkdir -p ~/.ssh
+      run: chmod 700 ~/.ssh
+      run: ssh -o StrictHostKeyChecking=no root@77.223.96.53 "echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin;docker compose pull; docker compose up"
