--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,9 +44,4 @@ jobs:
 
     steps:
       - name: ssh client
-        run: apk add openssh-client
-        run: eval $(ssh-agent -s)
-        run: echo "$PRIVATE" | tr -d '\r' | ssh-add -
-        run: mkdir -p ~/.ssh
-        run: chmod 700 ~/.ssh
-        run: ssh -o StrictHostKeyChecking=no root@77.223.96.53 "echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin;docker compose pull; docker compose up"
+        run: apk add openssh-client; eval $(ssh-agent -s); echo "$PRIVATE" | tr -d '\r' | ssh-add -; mkdir -p ~/.ssh; chmod 700 ~/.ssh; ssh -o StrictHostKeyChecking=no root@77.223.96.53 "echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin;docker compose pull; docker compose up"
