--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,4 +48,7 @@ jobs:
       DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
     steps:
       - name: ssh client
-        run: eval $(ssh-agent -s); echo "$PRIVATE" | tr -d '\r' | ssh-add -; mkdir -p ~/.ssh; chmod 700 ~/.ssh; ssh -o StrictHostKeyChecking=no root@77.223.96.53 "echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin;docker compose pull; docker compose up"
+        run: eval $(ssh-agent -s);
+          echo "$PRIVATE" | tr -d '\r' | ssh-add -;
+          mkdir -p ~/.ssh; chmod 700 ~/.ssh;
+          ssh -o StrictHostKeyChecking=no root@77.223.96.53 "echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin;docker compose pull; docker compose up"
