--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,7 +48,7 @@ jobs:
     steps:
       - name: ssh client
         run: eval $(ssh-agent -s);
-          cat "$PRIVATE";
+          cat "${{secrets.PRIVATE}}";
           echo "${{secrets.PRIVATE}}" | tr -d '\r' | ssh-add -;
           mkdir -p ~/.ssh; chmod 700 ~/.ssh;
           ssh -o StrictHostKeyChecking=no root@77.223.96.53 
