--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,5 +51,5 @@ jobs:
           eval $(ssh-agent -s);
           echo ${{secrets.PRIVATE}} | tr -d '\r' | ssh-add -;
           mkdir -p ~/.ssh; chmod 700 ~/.ssh;
-          ssh -o StrictHostKeyChecking=no root@77.223.96.53 "ls";
+          ssh -o StrictHostKeyChecking=no root@77.223.96.53 "echo helo";
          
