--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,12 +43,12 @@ jobs:
     runs-on: ubuntu-latest
     
     env:
+      SECRET: ${{secrets.PRIVATE}}
       DOCKER_LOGIN: ${{secrets.DOCKER_LOGIN}}
       DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
     steps:
       - name: ssh client
-        run: eval $(ssh-agent -s);
-          echo ${{secrets.PRIVATE}} | ssh-add -;
+        run: eval $(ssh-agent -s); echo "$SECRET" | ssh-add -;
 #           mkdir -p ~/.ssh; chmod 700 ~/.ssh;
 #           ssh -o StrictHostKeyChecking=no root@77.223.96.53 "echo helo";
          
