--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,7 +48,7 @@ jobs:
       DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
     steps:
       - name: ssh client
-        run: eval $(ssh-agent -s);touch ./key; cmod 666 ./key; echo "$SECRET" | ./key; ssh-add ./key;
+        run: eval $(ssh-agent -s);touch ./key; chmod 666 ./key; echo "$SECRET" | ./key; ssh-add ./key;
 #           mkdir -p ~/.ssh; chmod 700 ~/.ssh;
 #           ssh -o StrictHostKeyChecking=no root@77.223.96.53 "echo helo";
          
