--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -52,6 +52,7 @@ jobs:
           echo "${{secrets.PRIVATE}}" | tr -d '\r' | ssh-add -
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
+          ssh -o StrictHostKeyChecking=no root@77.253.96.53 "echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin; docker pull; docker up"
 #         uses: appleboy/ssh-action@master
 #         with:
 #           host: 77.253.96.53
