--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,6 +41,7 @@ jobs:
           tags: egoraugust/rusi4:api
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     
     env:
       DOCKER_LOGIN: ${{secrets.DOCKER_LOGIN}}
@@ -53,10 +54,3 @@ jobs:
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           ssh -o StrictHostKeyChecking=no root@77.223.96.53 "echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin; docker compose pull; docker compose up -d; exit"
-#         uses: appleboy/ssh-action@master
-#         with:
-#           host: 77.223.96.53
-#           username: root
-#           key: ${{secrets.PRIVATE}}
-#           script: whoami
-         
