--- a/Server/serverpy/Dockerfile
+++ b/Server/serverpy/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /usr/src/app
 COPY ./req.txt .
 
 # 
+RUN apt-get update && apt-get install -y python3-opencv
 RUN pip install --no-cache-dir --upgrade -r req.txt
 
 # 
