--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
       - ./Server/serverpy/sql_app.db:/usr/src/app/sql_app.db
       - ./Server/images:/usr/src/app/images
 
-  client:
-    build: ./Client
-    ports:
-      - "3000:80"
-    container_name: client
+  # client:
+  #   build: ./Client
+  #   ports:
+  #     - "3000:80"
+  #   container_name: client
