--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,9 @@ jobs:
 #           path: ./Client/node_modules
 #           key: ${{ runner.os }}-build-${{ env.cache-name }}
           
-          
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        
       - name: Login to docker
         uses: docker/login-action@v2
         with:
