--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,6 +44,8 @@ jobs:
           context: ./Client
           push: true
           tags: egoraugust/rusi4:client
+          cache-from: type=registry,ref=egoraugust/rusi4:clientbuildcache
+          cache-to: type=registry,ref=egoraugust/rusi4:clientbuildcache,mode=max
 
       - name: Build and push rtmp server
         uses: docker/build-push-action@v3
@@ -60,6 +62,8 @@ jobs:
           context: ./Server/serverpy
           push: true
           tags: egoraugust/rusi4:api
+          cache-from: type=registry,ref= egoraugust/rusi4:apibuildcache
+          cache-to: type=registry,ref= egoraugust/rusi4:apibuildcache,mode=max
   deploy:
     runs-on: ubuntu-latest
     needs: build
