--- a/Client/.env.local
+++ b/Client/.env.local
@@ -1,2 +1,3 @@
-VITE_API=http://77.223.96.53:8000
-VITE_STREAM=http://77.223.96.53:8080
+VITE_API=http://localhost:8000
+VITE_STREAM=http://localhost:8080
+
